--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,6 +1,7 @@
 * {
-  color: white;
+  
   color: black;
+;
 }
 
 body {
@@ -8,7 +9,7 @@ body {
 }
 
 section {
-  background: #1b232e;
+  
 }
 
 #home {
@@ -46,24 +47,21 @@ section {
   margin-top: 80px;
 }
 
-
-.capa-home {
-  width: 90%;
+.row {
+  background-color: #e5e0d8;
 }
 
-.button-home {
-  background-color: #394d22;
+.custom-image {
+  width: 100%; /* A imagem ocupa 100% da largura da tela */
+  height: 500px; /* Altura fixa de 500px */
+  object-fit: cover; /* Corta e ajusta a imagem para preencher o container */
 }
 
-.custom-btn-color {
-  background-color: #394d22; /* Cor de fundo */
 
-  color: white; /* Cor do texto */
+.section-recurso {
+  margin-top: 40px;
 }
 
-.custom-btn-color:hover {
-  background-color: #4d692c; /* Cor de fundo ao passar o mouse */
-}
 
 /* SEXTION QUALIDADES */
 
@@ -72,8 +70,8 @@ section {
   padding-bottom: 100px;
 }
 
-.caixa-recurso {
-  width: 100%;
+.box-recurso {
+  margin-bottom: 30px;
 }
 
 
@@ -105,8 +103,18 @@ h5 {
 
 
 
+/* PRODUITOS */
+.card {
+  margin-bottom: 20px;
+}
+
+
 
 
 footer {
 	background-color: #e5e0d8;
+}
+
+.footer-box {
+  display: flex;
 }
