--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,15 +1,18 @@
 * {
-  
   color: black;
-;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
+html {
+
+  scroll-padding-top: 80px; /* Altura do header fixo */
+}
 body {
-	background-color: #e5e0d8;
+  background-color: #e5e0d8;
 }
 
 section {
-  
 }
 
 #home {
@@ -19,7 +22,7 @@ section {
 }
 
 .navbar {
-  background-color: #e5e0d8;;
+  background-color: #e5e0d8;
   padding: 30px 0;
 }
 
@@ -57,11 +60,11 @@ section {
   object-fit: cover; /* Corta e ajusta a imagem para preencher o container */
 }
 
-
 .section-recurso {
-  margin-top: 40px;
+  margin-top: 60px;
+  display: flex;
+  justify-content: center;
 }
-
 
 /* SEXTION QUALIDADES */
 
@@ -74,9 +77,8 @@ section {
   margin-bottom: 30px;
 }
 
-
 .icon-1 {
-  width: 70px;
+  width: 60px;
 }
 
 h5 {
@@ -84,37 +86,108 @@ h5 {
 }
 
 .coluna {
-	margin-left: 100px;
+  margin-left: 100px;
 }
 
+/* produto */
 
-
-
-
-
-
+.img-produto {
+  border-radius: 50%;
+  width: 70%;
+  margin-bottom: 30px;
+  overflow: hidden;
+  object-fit: cover
+  
+}
 
 /* PROJETO */
 
 .text-projeto {
-	margin-bottom: 100px;
+  margin-bottom: 100px;
 }
-
-
-
 
 /* PRODUITOS */
 .card {
   margin-bottom: 20px;
 }
 
-
-
-
 footer {
-	background-color: #e5e0d8;
+  background-color: #e5e0d8;
 }
 
 .footer-box {
   display: flex;
+}
+
+@media (max-width: 575.98px) {
+  .navbar-expand-sm > .container,
+  .navbar-expand-sm > .container-fluid {
+    padding: 0 20px;
+  }
+
+  .box-img {
+    content: url('../img/fundo.png'); 
+    object-fit: cover;
+    height: unset;
+  }
+
+  #home {
+    height: auto;
+  }
+
+  .box-projeto {
+    text-align: center;
+    display: flex;
+    flex-direction: column-reverse;
+    padding: 0 6%;
+    gap: 20px;
+  }
+
+  .section-recurso {
+    padding: 0 6%;
+    gap: 30px;
+  }
+
+  .box-img {
+  }
+
+  .coluna {
+    margin: 0;
+  }
+
+  .caixa {
+    padding-bottom: 0;
+  }
+
+  .navbar-expand-sm > .container,
+  .navbar-expand-sm > .container-fluid {
+    padding: 0px 20px;
+    text-align: center;
+  }
+
+  .div-img {
+    margin-bottom: 50px;
+  }
+
+  .navbar-toggler {
+    border: 2px solid transparent; /* Borda transparente no mobile */
+  }
+  .box-produto {
+    margin-top: 100px;
+    padding: 0 6%;
+  }
+
+  .box-card {
+    padding: 0 6%;
+  }
+
+  .footer-box-m {
+    display: flex;
+    justify-content: center;
+
+  }
+
+  .btn-outline-dark {
+    gap: 50px;
+  }
 }
