--- a/css/estilo.css
+++ b/css/estilo.css
@@ -14,7 +14,6 @@ body {
   background-color: #e5e0d8;
 }
 
-section {}
 
 #home {
   background: #e5e0d8;
@@ -57,11 +56,8 @@ section {}
 
 .custom-image {
   width: 100%;
-  /* A imagem ocupa 100% da largura da tela */
   height: 500px;
-  /* Altura fixa de 500px */
   object-fit: cover;
-  /* Corta e ajusta a imagem para preencher o container */
 }
 
 .section-recurso {
@@ -70,7 +66,7 @@ section {}
   justify-content: center;
 }
 
-/* SEXTION QUALIDADES */
+/* SECTION QUALIDADES */
 
 .caixa {
   background-color: #e5e0d8;
@@ -132,10 +128,9 @@ footer {
   }
 
   .box-img {
-    content: url('../img/fundo.png');
+    content: url('../img/fundo2.png');
     height: 425px;
-    ;
-    width: 100%;
+    width: 99%;
   }
 
   #home {
@@ -155,7 +150,6 @@ footer {
     gap: 30px;
   }
 
-  .box-img {}
 
   .coluna {
     margin: 0;
