--- a/css/estilo.css
+++ b/css/estilo.css
@@ -5,9 +5,7 @@
 }
 
 html {
-
   scroll-padding-top: 80px;
-  /* Altura do header fixo */
 }
 
 body {
@@ -46,25 +44,61 @@ body {
 
 /* SECTION HOME */
 
-#home {
-  margin-top: 80px;
-}
-
-.row {
-  background-color: #e5e0d8;
-}
-
-.custom-image {
+.carousel-item img {
   width: 100%;
   height: 500px;
   object-fit: cover;
+  margin-top: 100px;
 }
 
-.section-recurso {
-  margin-top: 60px;
-  display: flex;
-  justify-content: center;
+.carousel-caption {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  bottom: initial;
+  text-align: center;
 }
+
+/* texto carrousel */
+
+.carousel-caption h2,
+h3 {
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+  text-transform: uppercase;
+  font-size: 20px;
+  text-shadow: 0px 0px 10px rgb(0, 0, 0);
+
+}
+
+@media (max-width: 768px) {
+
+  .carousel-caption {
+    top: 56%;
+
+  }
+
+  .carousel-item img {
+    height: 300px;
+
+
+  }
+
+  .carousel-caption h2,
+  h3 {
+    font-size: 16px;
+    padding: 0;
+
+
+  }
+
+  .carousel-caption h2 {
+    margin-top: 50px;
+  }
+}
+
+
 
 /* SECTION QUALIDADES */
 
@@ -73,8 +107,23 @@ body {
   padding-bottom: 100px;
 }
 
-.box-recurso {
-  margin-bottom: 30px;
+.section-valores {
+  margin-top: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 120px;
+}
+
+
+.card-recurso {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 300px;
+  margin: 0 6%;
+
+
 }
 
 .icon-1 {
@@ -83,6 +132,13 @@ body {
 
 h5 {
   margin-top: 20px;
+  text-transform: uppercase;
+}
+
+.card-recurso p {
+  font-size: 18px;
+  text-align: center;
+
 }
 
 .coluna {
@@ -105,7 +161,7 @@ h5 {
   margin-bottom: 100px;
 }
 
-/* PRODUITOS */
+/* PRODUTOS */
 .card {
   margin-bottom: 20px;
 }
@@ -118,6 +174,26 @@ footer {
   display: flex;
 }
 
+.box-card {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.box-card .card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.card-body {
+  flex-grow: 1;
+}
+
+.col-md-4 {
+  margin-bottom: 20px;
+}
+
 
 
 @media (max-width: 575.98px) {
@@ -127,11 +203,6 @@ footer {
     padding: 0 20px;
   }
 
-  .box-img {
-    content: url('../img/fundo2.png');
-    height: 425px;
-    width: 99%;
-  }
 
   #home {
     height: auto;
@@ -145,9 +216,10 @@ footer {
     gap: 20px;
   }
 
-  .section-recurso {
+  .section-valores {
     padding: 0 6%;
-    gap: 30px;
+    flex-direction: column;
+    gap: 100px;
   }
 
 
@@ -170,9 +242,10 @@ footer {
   }
 
   .navbar-toggler {
-    border: 2px solid transparent;
-    /* Borda transparente no mobile */
+    border: 0px solid transparent;
   }
+
+
 
   .box-produto {
     margin-top: 100px;
